src/test/ui/moves/moves-based-on-type-tuple.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-tuple.rs:4:13
   |
LL | fn dup(x: Box<isize>) -> Box<(Box<isize>,Box<isize>)> {
   |        - move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
LL |     box (x, x)
   |          -  ^ value used here after move
   |          |
   |          value moved here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
