src/test/ui/moves/moves-based-on-type-tuple.rs
#![feature(box_syntax)]

fn dup(x: Box<isize>) -> Box<(Box<isize>,Box<isize>)> {
    box (x, x)
    //~^ use of moved value: `x` [E0382]
}

fn main() {
    dup(box 3);
}
